[gd_scene load_steps=2 format=3 uid="uid://cq1jow4pgpduh"]

[ext_resource type="Script" uid="uid://o6l2k0f8lcmt" path="res://Scripts/Events/event_5.gd" id="1_n8q2w"]

[node name="Event5" type="Node2D"]
script = ExtResource("1_n8q2w")

[node name="AdvisorSprite" type="Sprite2D" parent="."]

[node name="DialoguePanel" type="Panel" parent="."]
offset_left = 523.0
offset_top = 794.0
offset_right = 1473.0
offset_bottom = 1133.0

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.5
offset_top = -127.5
offset_right = 408.5
offset_bottom = 127.5
grow_horizontal = 2
grow_vertical = 2

[node name="DecisionPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 527.0
offset_top = 542.0
offset_right = 1467.0
offset_bottom = 774.0
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="DecisionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -33.0
offset_right = 82.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="TaxButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Vi trenger mere penger! Øk skattene!"

[node name="LoanButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "En av våre allierte kan vel hjelpe oss? Be om et lån."

[node name="CutButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Innbyggerne må klare seg med færre sosiale tjenester, slik sparer vi penger."

[node name="PrintButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Da får vi trykke flere penger. Start pressen!"

[node name="FerdigKnapp" type="Button" parent="DecisionPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.5
offset_top = -84.5
offset_right = 136.5
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45
text = "Ferdig"

[connection signal="pressed" from="DecisionPanel/VBoxContainer/TaxButton" to="." method="_on_tax_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/LoanButton" to="." method="_on_loan_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/CutButton" to="." method="_on_cut_spending_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/PrintButton" to="." method="_on_print_money_button_pressed"]
[connection signal="pressed" from="DecisionPanel/FerdigKnapp" to="." method="_on_ferdig_knapp_pressed"]
